<resources>
    <string name="app_name">Getak</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getak">جيتك</string>
    <string name="navigation_drawer_open" translatable="false" />
    <string name="navigation_drawer_close" translatable="false" />
    <string name="my_account">حسابي</string>
    <string name="my_trips">رحلاتى</string>
    <string name="favorite_places">الأماكن المفضله</string>
    <string name="messages">حسابات البنوك</string>
    <string name="send">إرسال</string>
    <string name="save">حفظ </string>
    <string name="savechang">حفظ التغيرات</string>
    <string name="support">الدعم</string>
    <string name="settings">الاعدادات</string>
    <string name="home">الرئيسية</string>
    <string name="login">تسجيل الدخول</string>
    <string name="skip">تخطى</string>
    <string name="custlogin">تسجيل دخول عميل</string>
    <string name="driverlogin">تسجيل دخول سائق</string>
    <string name="cust">راكب</string>
    <string name="driv">سائق</string>
    <string name="password">كلمة المرور</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="back">عوده</string>
    <string name="register">تسجيل</string>
    <string name="re_password">تأكيد كلمة المرور</string>
    <string name="email">البريد الإلكترونى</string>
    <string name="name">الأسم</string>
    <string name="code">الرمز</string>
    <string name="next">التالي</string>
    <string name="activation_code">رمز التأكيد</string>
    <string name="address">العنوان</string>
    <string name="gender">النوع</string>
    <string name="age">السن</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="subject">الموضوع</string>
    <string name="contracts">العقود</string>
    <string name="no_contracts">لا توجد عقود</string>
    <string name="customer_name">"أسم الراكب :  "</string>
    <string name="driver_name">"أسم السائق : "</string>
    <string name="place_of_going">"مكان الذهاب : "</string>
    <string name="place_of_return">"مكان العودة : "</string>
    <string name="time_of_going">"وقت الذهاب : "</string>
    <string name="time_of_return">"وقت العودة : "</string>
    <string name="start_of_contract">"بداية العقد : "</string>
    <string name="end_of_contract">"نهاية العقد : "</string>
    <string name="total_amount">"القيمة الكلية : "</string>
    <string name="days">"الأيام : "</string>
    <string name="start">بداية</string>
    <string name="target">ذهاب</string>
    <string name="approve_the_terms_and_conditions">الموافقة على الشروط والأحكام</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="daysss">الأيام</string>
    <string name="sat">السبت</string>
    <string name="sun">الأحد</string>
    <string name="mon">الأثنين</string>
    <string name="tue">الثلاثاء</string>
    <string name="wed">الأربعاء</string>
    <string name="fri">الجمعة</string>
    <string name="the">الخميس</string>
    <string name="reqage">كلمة المرور مطلوبه</string>
    <string name="passreq">أعد إدخال كلمة المرور</string>
    <string name="addressreq">العنوان مطلوب</string>
    <string name="agereq">السن مطلوب</string>
    <string name="emailreq">البريد الإلكترونى مطلوب</string>
    <string name="emailvalid">البريد الإلكتروني غير صحيح</string>
    <string name="namereq">الأسم مطلوب</string>
    <string name="msgrequired">الرساله مطلوبه</string>
    <string name="phonereq">رقم الجوال مطلوب</string>
    <string name="logout">تسجيل خروج</string>
    <string name="usernamereq">أدخل أسم المستخدم</string>
    <string name="exit">هل تريد الخروج من التطبيق ؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="personalid">رقم الهويه</string>
    <string name="license_type">نوع الرخصة</string>
    <string name="expired">تاريخ إنتهاء الرخصة</string>
    <string name="cartypetext">نوع السيارة</string>
    <string name="carmodel">موديل السيارة</string>
    <string name="bankaccount">رقم الحساب البنكي</string>
    <string name="carcolor">لون السيارة</string>
    <string name="tripsnumber">عدد الرحلات التى يمكن أن تقوم بها فى اليوم</string>
    <string name="workingdays">أيام الأسبوع المتاح فيها للعمل</string>
    <string name="idpic">رفع صورة الهوية</string>
    <string name="licenspic">رفع صورة الرخصة</string>
    <string name="carpic">رفع صورة السيارة</string>
    <string name="male">ذكر</string>
    <string name="female">أنثي</string>
    <string name="licenceid">رقم الرخصة</string>
    <string name="malaky">ملاكي</string>
    <string name="ogra">أجرة</string>
    <string name="iderr">أدخل رقم الهويه</string>
    <string name="cartypeerr">أدخل نوع السيارة</string>
    <string name="licenseerr">أدخل رقم الرخصة</string>
    <string name="carmodelerr">أدخل نوع السيارة</string>
    <string name="tripserrr">أدخل عدد الرحلات التي يمكنك تنفيذها فى اليوم</string>
    <string name="bankaccounterr">أدخل رقم حسابك البنكي</string>
    <string name="colorerr">أدخل لون السيارة</string>
    <string name="licenceexpired">تاريخ إنتهاء الرخصة</string>
    <string name="expiredlicenceerr">أدخل تاريخ إنتهاء الرخصة</string>
    <string name="chose_contract_days">قم بإختيار عقدك</string>
    <string name="getk">جيتك-Getak</string>
    <string name="active">أنت متاح</string>
    <string name="notactive">أنت غير متاح</string>
    <string name="licensetype">أدخل نوع الرخصة</string>
    <string name="accept">قبول</string>
    <string name="cnacle">رفض</string>
    <string name="end">إنهاء الرحلة</string>
    <string name="endo">إنهاء</string>
</resources>
