<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Activites.LoginActivity">

    <LinearLayout
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_type_tab"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/user_name_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/input_txt_bg"
            android:padding="@dimen/_5sdp" />
        <TextView
            android:id="@+id/user_login_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/input_txt_bg"
            android:hint="+96XXXXXXXXXXXXX"
            android:padding="@dimen/_5sdp" />
        <TextView
            android:id="@+id/email_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/input_txt_bg"
            android:padding="@dimen/_5sdp" />


        <TextView
            android:id="@+id/password_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/input_txt_bg"
            android:padding="@dimen/_5sdp" />
        <TextView
            android:id="@+id/re_password_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/re_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/re_password_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/input_txt_bg"
            android:padding="@dimen/_5sdp" />


    </LinearLayout>


    <android.support.design.widget.TabLayout
        android:id="@+id/reg_type_tab"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_lbl"
       android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/transparent"
        app:tabBackground="@drawable/tab_background"
        app:tabIndicatorHeight="0dp"
        app:tabMinWidth="0dp"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/lightblue">

    </android.support.design.widget.TabLayout>
    <LinearLayout
        android:id="@+id/buttons_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/login_inputs_box"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="vertical">
<CheckBox
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/polices_check"
    android:text="@string/approve_the_terms_and_conditions"
    android:layout_marginBottom="@dimen/_10sdp"/>
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>
</RelativeLayout>