<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentSupport">

    <!-- TODO: Update blank fragment layout -->
    <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/profile_image"-->
        <!--android:layout_width="96dp"-->
        <!--android:layout_height="96dp"-->
        <!--android:src="@drawable/logo"-->
        <!--android:scaleType="fitCenter"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="30dp"-->
        <!--app:civ_border_width="2dp"-->
        <!--app:civ_border_color="#FF000000"/>-->
    <ImageView
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_flights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/support"
        android:layout_below="@+id/logo"
        android:textColor="@color/sidemenu"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="@dimen/_13sdp" />
    <TextView
        android:id="@+id/user_login_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txt_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/phone_number"
        android:textColor="@color/sidemenu"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="right"
        android:layout_below="@+id/user_login_lbl"
        android:background="@drawable/input_txt_bg"
        android:textSize="13sp"
        android:hint="+96XXXXXXXXXXXXX"
android:singleLine="true"
        android:inputType="number"
        android:layout_marginRight="@dimen/_10sdp"
        android:padding="@dimen/_5sdp" />
    <TextView
        android:id="@+id/txt_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_below="@+id/user_name_input"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/email"
        android:textColor="@color/sidemenu"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textSize="13sp"
        android:singleLine="true"
        android:textColor="@color/sidemenu"
        android:layout_below="@+id/txt_mail"
        android:background="@drawable/input_txt_bg"
        android:padding="@dimen/_5sdp" />
    <TextView
        android:id="@+id/txt_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_below="@+id/email_input"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/subject"
        android:textColor="@color/sidemenu"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/subject_input"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/txt_subject"
        android:background="@drawable/input_txt_bg"
        android:padding="@dimen/_5sdp" />
    <TextView
        android:id="@+id/txt_messg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_below="@+id/subject_input"
        android:text="@string/messages"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/messg_input"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/txt_subject"
        android:background="@drawable/input_txt_bg"
        android:padding="@dimen/_5sdp" />
    <Button
        android:id="@+id/send_btn"
        android:layout_width="200dp"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/button_bg"
        android:text="@string/send"
        android:layout_centerInParent="true"
        android:layout_below="@+id/messg_input"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />
</RelativeLayout>