<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".Activites.PhoneNumberActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical">

        <com.hbb20.CountryCodePicker
            android:id="@+id/keys_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:padding="@dimen/_3sdp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoDetectLanguage="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/code"
                android:inputType="phone"
                android:padding="@dimen/_5sdp" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/_5sdp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:text="@string/next"
        android:layout_margin="@dimen/_25sdp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp" />
</RelativeLayout>