<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context="getak.app.com.getak.Activites.Splash">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/bg_header">

        <ImageView
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_230sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/skip_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

</RelativeLayout>
